cli: compile project skeleton

--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-25 Thu 16:50]
+#+CAPTION: Clock summary at [2018-10-25 Thu 17:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *79:10* |       |       |   0.0 |
+| *Total time*                                                                | *79:37* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 79:10   |       |       |   0.0 |
-| Active                                                                      |         | 79:10 |       |   0.0 |
+| Stories                                                                     | 79:37   |       |       |   0.0 |
+| Active                                                                      |         | 79:37 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  2:52 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -52,7 +52,7 @@
 | Update dogen namespaces to match the new specification                      |         |       | 12:28 |   0.0 |
 | Add support for LGTM                                                        |         |       |  0:18 |   0.0 |
 | Read up on framework and API design                                         |         |       |  5:30 |   0.0 |
-| Create a single binary for all of dogen                                     |         |       |  2:35 |   0.0 |
+| Create a single binary for all of dogen                                     |         |       |  3:02 |   0.0 |
 | Implement the new dogen product API                                         |         |       |  0:32 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -903,6 +903,7 @@ names.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2018-10-25 Thu 16:51]--[2018-10-25 Thu 17:18] =>  0:27
     CLOCK: [2018-10-25 Thu 16:13]--[2018-10-25 Thu 16:50] =>  0:37
     CLOCK: [2018-10-19 Fri 14:41]--[2018-10-19 Fri 16:39] =>  1:58
     :END:
